--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -9,7 +9,7 @@
     ]
   },
   "publicPath": "/app/themes/sage",
-  "devUrl": "http://example.test",
+  "devUrl": "http://192.168.99.100:8080",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
   "watch": [
