--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   },
   "dependencies": {
     "bootstrap": "v4.3.1",
+    "flickity": "^2.2.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7"
   }
