--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "bootstrap": "v4.3.1",
     "flickity": "^2.2.0",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.7"
+    "popper.js": "^1.14.7",
+    "vanilla-lazyload": "^12.0.0"
   }
 }
