Selected Product USP (Free shipping, return)

--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -8,7 +8,7 @@
       "./scripts/customizer.js"
     ]
   },
-  "publicPath": "/wp-content/themes/stokpress",
+  "publicPath": "/app/themes/sage",
   "devUrl": "http://skhoop.local/",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
